--- a/search.phtml
+++ b/search.phtml
@@ -1,9 +1,10 @@
+<%@ Language=VBScript %>
 <!--#INCLUDE FILE="local/local.phtml"-->
 <!--#INCLUDE FILE="core/include_template_info.phtml"-->
 <%
 	If THEME_TEMPLATE = "" then
-		Server.Execute("_Error404.phtml")
+		'Server.Execute("_index.phtml")
 	Else
-		Server.Execute("theme/" & THEME_TEMPLATE & "/Error404.phtml")
+		Server.Execute("theme/" & THEME_TEMPLATE & "/search.phtml")
 	End if
-%>z
+%>
