--- a/theme/marketshop1/custom/include_custom_productlist.phtml
+++ b/theme/marketshop1/custom/include_custom_productlist.phtml
@@ -157,6 +157,8 @@
 		</div>
 		<div class="caption">
 			<h4><a href="<%=custom_product_link%>"><%=custom_prod_name%></a></h4>
+		</div>
+		<div class="button-group" style="vertical-align:bottom">
 			<p class="price">
 				<% if custom_prod_on_sale then %>
 				<span class="price-new">$<%=FormatNumber(custom_adjusted_price,2)%></span><span class="price-old">$<%=FormatNumber(custom_prod_group_price,2)%></span>
