--- a/admin/api/modal_ajax_mfg_edit.phtml
+++ b/admin/api/modal_ajax_mfg_edit.phtml
@@ -14,6 +14,7 @@
 	if not rsMfg.EOF then
 		mfg_name = rsMfg("mfg_name")
 		mfg_map_enabled = rsMfg("mfg_map_enabled")
+		mfg_url_key = rsMfg("url_key")
 		bNewMfg = false
 	end if
 	rsMfg.Close
@@ -24,7 +25,8 @@
 	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 	<h4>Manufacturer</h4>
 </div>
-<form role="form" id='billingform'>
+<form role="form" id='billingform' class="form-horizontal">
+<div class="form-body">
 <input type="hidden" name="mfg_id" value="<%=mfg_id%>" />
 <div class="modal-body" style="padding-left: 30px;">
 	<div class="col-md-12">
@@ -37,19 +39,26 @@
 	</div>
 	<div class="row">
 		<div class="form-group">
-			<label class="col-sm-3 control-label" for="mfg_name">
-				Name <span class="symbol required"></span> 
+			<label class="col-md-3 control-label" for="mfg_name">
+				Name <span class="required"> * </span>
 			</label>
-			<div class="col-sm-9">
+			<div class="col-md-6">
 				<input type="text" placeholder="" id="mfg_name" name="mfg_name" class="form-control input-sm" value="<%=mfg_name%>">
 			</div>
 		</div>
-		<br><br>
 		<div class="form-group">
-			<label class="col-sm-3 control-label" for="mfg_name">
-				Map Enabled <span class="symbol required"></span> 
+			<label class="col-md-3 control-label" for="url_key">
+				URL Key <span class="symbol required"></span> 
 			</label>
-			<div class="col-sm-9">
+			<div class="col-md-6">
+				<input type="text" placeholder="" id="url_key" name="url_key" class="form-control input-sm" value="<%=mfg_url_key%>">
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="col-md-3 control-label" for="mfg_name">
+				Map Enabled <span class="required"> * </span>
+			</label>
+			<div class="col-md-6">
 				<select id="mfg_map_enabled" name="mfg_map_enabled" class="form-control select input-sm">
 					<option value="0" <% if mfg_map_enabled = 0 then%>selected<% end if %>>No</option>
 					<option value="1" <% if mfg_map_enabled = 1 then%>selected<% end if %>>Yes</option>
@@ -61,6 +70,7 @@
 <div class="modal-footer">
 	<button class="btn btn-primary btn-sm" id="billing_update_btn"><%if bNewMfg then%>Add<%else%>Update<%end if%></button>
 	<button type="button" data-dismiss="modal" class="btn btn-white btn-sm">Cancel</button>
+</div>
 </div>
 </form>
 <script language="javascript">
@@ -84,23 +94,31 @@ var FormValidation = function () {
 				rules: {
 					mfg_name: {
 						required: true
+					},
+					url_key: {
+						minlength: 3,
+						"remote":
+						{
+						  url: 'api/sp_product_check_url_key.phtml?pf_id=<%=mfg_id%>&url_key_type=0',
+						  type: "post"
+						}
 					}
 				},
-
+				messages: {
+					mfg_name: "Please specify name",
+					url_key:
+					{
+						minlength: "The URL Key must be greater than 3 chracter length.",
+						remote: "The specified URL Key is not unique."
+					}
+				},
+				
 				invalidHandler: function (event, validator) { //display error alert on form submit              
 					success1.hide();
 					error1.show();
 					App.scrollTo(error1, -200);
 				},
 
-				errorPlacement: function (error, element) { // render error placement for each input type
-					var cont = $(element).parent('.input-group');
-					if (cont) {
-						cont.after(error);
-					} else {
-						element.after(error);
-					}
-				},
 
 				highlight: function (element) { // hightlight error inputs
 
